return both sse and ws urls for client to connect
